--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -73,6 +73,30 @@ public without sharing class TaskService {
         instance = (TaskService) Test.createStub(TaskService.class, mock);
     }
 
+    //Task filters------------------------------------------------------------------------------------------------------
+    private String getVisibilityFilter() {
+        String role = ParticipantService.getParticipantState().isDelegate ? TASK_VISIBILITY_DELEGATES : TASK_VISIBILITY_OWNER;
+        return ' AND Visible_For__c INCLUDES (\'' + role + '\') ';
+    }
+
+    public String getOpenTasksFilter() {
+        List<String> statusFilter = new List<String>{
+                TASK_STATUS_OPEN,
+                TASK_STATUS_IN_PROGRESS
+        };
+        return ' Status IN (\'' + String.join(statusFilter, '\',\'') + '\') ';
+    }
+
+    private String getCompletedTasksFilter() {
+        List<String> statusFilter = new List<String>{
+                TASK_STATUS_IGNORED,
+                TASK_STATUS_COMPLETED
+        };
+        return ' (Status IN (\'' + String.join(statusFilter, '\',\'') + '\') ' +
+                'OR (Status = \'' + TASK_STATUS_EXPIRED + '\' AND Task_Type__c = \'' + TASK_TYPE_SURVEY + '\')) ';
+    }
+
+    //Task getters------------------------------------------------------------------------------------------------------
     public List<Task> getTasksCommon(String filter) {
         List<Task> tasks = new List<Task>();
         String query = 'SELECT ' + String.join(DEFAULT_FIELDS, ',') + ' FROM Task WHERE ';
@@ -89,9 +113,9 @@ public without sharing class TaskService {
         tasks.addAll((List<Task>) DatabaseService.query(query + queryFilter));
 
         Boolean isDelegate = ParticipantService.getInstance().getState().isDelegate;
-        if(isDelegate) {
+        if (isDelegate) {
             ownerFilter = 'OwnerId = \'' + PatientDelegateService.getInstance().getParticipantUserId() + '\'';
-            if(filter == null) {
+            if (filter == null) {
                 queryFilter = ownerFilter;
             } else {
                 queryFilter = ownerFilter + ' AND ' + filter;
@@ -122,6 +146,7 @@ public without sharing class TaskService {
         return tasks[0];
     }
 
+    //Task state changers-----------------------------------------------------------------------------------------------
     public void ignoreTask(Id taskId) {
         Task task = getTask(taskId);
         task.Status = TASK_STATUS_IGNORED;
@@ -140,6 +165,16 @@ public without sharing class TaskService {
         task.Completed_Date__c = Datetime.now();
     }
 
+    public void completeCYPTaskForParticipant() {
+        List<Task> tasks = getTasksCommon('Task_Code__c =\'' +
+                TASK_CODE_COMPLETE_YOUR_PROFILE + '\' AND ' + getOpenTasksFilter());
+        if (tasks.size() > 0) {
+            completeTask(tasks[0]);
+            update tasks[0];
+        }
+    }
+
+    //Task creators-----------------------------------------------------------------------------------------------------
     public void createSurveyTasks(Map<Id, String> invitationsVisible) {
         List<SurveyInvitation> surveyInvitation = [
                 SELECT
@@ -168,7 +203,7 @@ public without sharing class TaskService {
         Set<Id> allContacts = new Set<Id>();
         allContacts.addAll(contactIds);
         allContacts.addAll(delContactIds);
-        Map<Id, TimeZone> userTimezoneMap = getUserTimezoneMap(allContacts);
+        Map<Id, TimeZone> userTimezoneMap = DateTimeConverterUtil.getUsersTimezoneMap(allContacts);
 
         List<TaskConfig> taskConfigs = new List<TaskConfig>();
         for (SurveyInvitation inv : surveyInvitation) {
@@ -204,16 +239,20 @@ public without sharing class TaskService {
                 tsc.description = inv.Id;
                 tsc.priority = TASK_PRIORITY_CRITICAL;
                 tsc.reminderSchedule = inv.Reminder_Schedule__c;
-                tsc.startDate = getUserDatetime(userTimezoneMap.get(tsc.ownerId), null).date();
+
+                TimeZone userTZ = userTimezoneMap.get(tsc.ownerId);
+                Datetime userDatetime = DateTimeConverterUtil.getUserDatetime(userTZ, null);
+
+                tsc.startDate = userDatetime.date();
                 if (inv.InviteExpiryDateTime != null) {
-                    Date expiryDate= inv.InviteExpiryDateTime.date();
+                    Date expiryDate = inv.InviteExpiryDateTime.date();
                     Integer daysBetween = Date.today().daysBetween(expiryDate);
                     tsc.activityDate = tsc.startDate.addDays(daysBetween);
                 }
-
                 if (inv.Reminder_Schedule__r.First_Reminder_day__c != null) {
                     Integer firstReminderDay = (Integer) inv.Reminder_Schedule__r.First_Reminder_day__c;
-                    tsc.reminderDatetime = getUserDatetime(userTimezoneMap.get(tsc.ownerId), null).addDays(firstReminderDay);
+                    tsc.reminderDatetime = DateTimeConverterUtil.addDaysInUserTimeZone(userDatetime, userTZ, firstReminderDay);
+                    tsc.reminderGMT = DateTimeConverterUtil.convertUserDatetimeToGMT(tsc.reminderDatetime, userTZ);
                 }
                 tsc.subject = subject;
                 tsc.type = TASK_TYPE_SURVEY;
@@ -224,33 +263,10 @@ public without sharing class TaskService {
         }
 
         List<Task> tasks = new List<Task>();
-        for (TaskConfig taskConfig : taskConfigs) tasks.add(createTask(taskConfig));
+        for (TaskConfig taskConfig : taskConfigs) tasks.add(createTaskFromConfig(taskConfig));
 
         insert tasks;
         System.debug('Task inserted: ' + tasks.size());
-    }
-
-    public Task createTask(TaskConfig taskConfig) {
-        Task task = new Task(
-                OwnerId = taskConfig.ownerId,
-                Priority = taskConfig.priority,
-                Status = taskConfig.status,
-                Subject = taskConfig.subject,
-                Visible_For__c = taskConfig.visibility
-        );
-
-        if (taskConfig.activityDate != null) task.ActivityDate = taskConfig.activityDate;
-        if (taskConfig.code != null) task.Task_Code__c = taskConfig.code;
-        if (taskConfig.description != null) task.Description = taskConfig.description;
-        if (taskConfig.originator != null) task.Originator__c = taskConfig.originator;
-        if (taskConfig.reminderDatetime != null) task.Reminder_Date__c = taskConfig.reminderDatetime;
-        if (taskConfig.reminderSchedule != null) task.Reminder_Schedule__c = taskConfig.reminderSchedule;
-        if (taskConfig.startDate != null) task.Start_Date__c = taskConfig.startDate;
-        if (taskConfig.type != null) task.Task_Type__c = taskConfig.type;
-        if (taskConfig.whatId != null) task.WhatId = taskConfig.whatId;
-        if (taskConfig.whoId != null) task.WhoId = taskConfig.whoId;
-
-        return task;
     }
 
     public Task createCompleteYourProfileTask(Id ownerId, Id participantId, Id participantContactId) {
@@ -266,35 +282,30 @@ public without sharing class TaskService {
         );
     }
 
-    private String getVisibilityFilter() {
-        String role = ParticipantService.getParticipantState().isDelegate ? TASK_VISIBILITY_DELEGATES : TASK_VISIBILITY_OWNER;
-        return ' AND Visible_For__c INCLUDES (\'' + role + '\') ';
-    }
+    public Task createTaskFromConfig(TaskConfig taskConfig) {
+        Task task = new Task(
+                OwnerId = taskConfig.ownerId,
+                Priority = taskConfig.priority,
+                Status = taskConfig.status,
+                Subject = taskConfig.subject,
+                Visible_For__c = taskConfig.visibility
+        );
 
-    public String getOpenTasksFilter() {
-        List<String> statusFilter = new List<String>{
-                TASK_STATUS_OPEN,
-                TASK_STATUS_IN_PROGRESS
-        };
-        return ' Status IN (\'' + String.join(statusFilter, '\',\'') + '\') ';
-    }
-
-    public void completeCYPTaskForParticipant() {
-        List<Task> tasks = getTasksCommon('Task_Code__c =\'' +
-                TASK_CODE_COMPLETE_YOUR_PROFILE + '\' AND ' + getOpenTasksFilter());
-        if (tasks.size() > 0) {
-            completeTask(tasks[0]);
-            update tasks[0];
+        if (taskConfig.activityDate != null) task.ActivityDate = taskConfig.activityDate;
+        if (taskConfig.code != null) task.Task_Code__c = taskConfig.code;
+        if (taskConfig.description != null) task.Description = taskConfig.description;
+        if (taskConfig.originator != null) task.Originator__c = taskConfig.originator;
+        if (taskConfig.reminderDatetime != null) {
+            task.Reminder_Date__c = taskConfig.reminderDatetime;
+            if(taskConfig.reminderGMT != null) task.ReminderDateTime = taskConfig.reminderGMT;
         }
-    }
+        if (taskConfig.reminderSchedule != null) task.Reminder_Schedule__c = taskConfig.reminderSchedule;
+        if (taskConfig.startDate != null) task.Start_Date__c = taskConfig.startDate;
+        if (taskConfig.type != null) task.Task_Type__c = taskConfig.type;
+        if (taskConfig.whatId != null) task.WhatId = taskConfig.whatId;
+        if (taskConfig.whoId != null) task.WhoId = taskConfig.whoId;
 
-    private String getCompletedTasksFilter() {
-        List<String> statusFilter = new List<String>{
-                TASK_STATUS_IGNORED,
-                TASK_STATUS_COMPLETED
-        };
-        return ' (Status IN (\'' + String.join(statusFilter, '\',\'') + '\') ' +
-               'OR (Status = \'' + TASK_STATUS_EXPIRED + '\' AND Task_Type__c = \'' + TASK_TYPE_SURVEY + '\')) ';
+        return task;
     }
 
     public Map<Id, Id> getContactUserIdsMap(Set<Id> contactIds) {
@@ -310,26 +321,6 @@ public without sharing class TaskService {
         return contactUserMap;
     }
 
-    public static Map<Id, TimeZone> getUserTimezoneMap(Set<Id> contactIds) {
-        List<User> users = [
-                SELECT Id, TimeZoneSidKey
-                FROM User
-                WHERE ContactId IN:contactIds
-                AND IsActive = TRUE
-        ];
-        Map<Id, TimeZone> userMap = new Map<Id, TimeZone>();
-        for (User u : users) userMap.put(u.Id, TimeZone.getTimeZone(u.TimeZoneSidKey));
-
-        return userMap;
-    }
-
-    public static Datetime getUserDatetime(TimeZone timezone, Datetime moment) {
-        if(moment == null) moment = Datetime.now();
-
-        String nowFormat = moment.format('YYYY-MM-dd HH:mm:ss', timezone.toString());
-        return Datetime.valueOfGmt(nowFormat);
-    }
-
     public class TaskConfig {
         public Date activityDate;
         public String code;
@@ -338,6 +329,7 @@ public without sharing class TaskService {
         public Id ownerId;
         public String priority;
         public Datetime reminderDatetime;
+        public Datetime reminderGMT;
         public Id reminderSchedule;
         public Date startDate;
         public String status;
