--- a/force-app/main/default/classes/PSEStatusHistoryRemote.cls
+++ b/force-app/main/default/classes/PSEStatusHistoryRemote.cls
@@ -20,16 +20,16 @@ public without sharing class PSEStatusHistoryRemote {
     public static String getParticipationStatusHistory(Id peId){
         try{
             List<Participant_Enrollment_Status_History__c> histories = [
-                    SELECT Id, NewStatus__c, Date__c
+                    SELECT Id, Status__c, Date__c
                     FROM Participant_Enrollment_Status_History__c
                     WHERE ParticipantEnrollment__c =: peId
-                    AND NewStatus__c IN: PEStatusState.PE_STATUS_GROUP_PARTICIPATION_FLOW
+                    AND Status__c IN: PEStatusState.PE_STATUS_GROUP_PARTICIPATION_FLOW
                     ORDER BY Date__c DESC
             ];
 
             List<PathItem> items = new List<PathItem>();
             for(Participant_Enrollment_Status_History__c peSH : histories) {
-                peSH.NewStatus__c = TranslateHelper.getPickListLabel(Participant_Enrollment__c.Participant_Status__c, peSH.NewStatus__c);
+                peSH.Status__c = TranslateHelper.getPickListLabel(Participant_Enrollment__c.Participant_Status__c, peSH.Status__c);
                 items.add(new PathItem(peSH));
             }
             return JSON.serialize(items);
