--- a/force-app/main/default/classes/MyTeamRemote.cls
+++ b/force-app/main/default/classes/MyTeamRemote.cls
@@ -250,7 +250,7 @@ public without sharing class MyTeamRemote {
     }
 
     @AuraEnabled
-    public static void saveDelegateLevelChanges(String userMode, String delegate) {
+    public static String saveDelegateLevelChanges(String userMode, String delegate) {
         Savepoint sp = Database.setSavepoint();
         try {
             DelegateWrapper dw = (DelegateWrapper) JSON.deserialize(delegate, DelegateWrapper.class);
@@ -286,6 +286,11 @@ public without sharing class MyTeamRemote {
                             } else if (delegateRecord.delegateLevel != curDelegateRecord.Delegate_Level__c) {
                                 curDelegateRecord.Delegate_Level__c = delegateRecord.delegateLevel;
                                 delegateRecordsToUpdate.add(curDelegateRecord);
+                            }
+                            if (!levelByStudy.containsKey(curDelegateRecord.Clinical_Trial_Profile__c)) {
+                                levelByStudy.put(curDelegateRecord.Clinical_Trial_Profile__c, delegateRecord.delegateLevel);
+                            } else if (levelByStudy.get(curDelegateRecord.Clinical_Trial_Profile__c) != delegateRecord.delegateLevel) {
+                                 return 'ERROR: ' + Label.TST_Permissions_should_be_the_same_for_study;
                             }
                         }
                     }
@@ -347,6 +352,8 @@ public without sharing class MyTeamRemote {
             Database.rollback(sp);
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
         }
+
+        return '';
     }
     private static void sendEmailNotification(Contact delegateContact) {
         Map<Id, String> toSendNotificationMap = new Map<Id, String>();
